--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@
 site_name: CircuitPython AT42QT2120 Library
 nav:
   - Introduction: index.md
+  - Compatibility: compatibility.md
 theme: readthedocs
 repo_url: https://github.com/MikeCoats/CircuitPython_AT42QT2120/
 repo_name: GitHub
